--- a/package.json
+++ b/package.json
@@ -3,13 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.9.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.4",
+    "axios": "^1.1.2",
+    "blob": "^0.1.0",
+    "bootstrap": "^5.2.0",
+    "date-fns": "^2.29.1",
+    "file-saver": "^2.0.5",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-bootstrap": "^2.5.0",
+    "react-calendar": "^4.0.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.3.0",
+    "react-icons": "^4.4.0",
+    "react-query": "^3.39.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-table": "^7.8.0",
+    "sweetalert": "^2.1.2",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
